crates/localpilot-tui/tests/snapshots/render__approval_modal_snapshot.snap
---
source: crates/localpilot-tui/tests/render.rs
expression: "render_string(&state, 90, 12)"
---
                                                                                          
                                                                                          
               ╭ approve tool?────────────────────────────────────────────╮               
               │tool: run_shell                                           │               
               │target: rm -rf build                                      │               
               │risk: destructive                                         │               
               │profile: default                                          │               
╭ input  (Enter│                                                          │──────────────╮
│              │[y] approve   [n] deny                                    │              │
╰──────────────╰──────────────────────────────────────────────────────────╯──────────────╯
mode:agent profile:default tok in/out:120/48 24 t/s ctx:~1200/8000
