crates/localpilot-tui/tests/snapshots/render__approval_prompt_snapshot.snap
---
source: crates/localpilot-tui/tests/render.rs
expression: "render_natural(&state, 90)"
---
Approve tool?                                                                             
tool: run_shell  (destructive)                                                            
target: rm -rf build                                                                      
profile: default                                                                          
[y] approve    [n] deny                                                                   
╭ input  (Enter sends · Alt+Enter, Ctrl+J, or trailing \ make a newline)─────────────────╮
│                                                                                        │
╰────────────────────────────────────────────────────────────────────────────────────────╯
mode:agent profile:default tok in/out:120/48 24 t/s ctx:~1200/8000                        
test-model · session:ab12cd34
