crates/localpilot-tui/tests/snapshots/render__streaming_turn_snapshot.snap
---
source: crates/localpilot-tui/tests/render.rs
expression: "render_string(&state, 90, 18)"
---
╭ LocalPilot─────────────────────────────────────────────────────────────────────────────╮
│LocalPilot 0.1.0 | local/test-model | ws:demo | session:ab12cd                          │
╰────────────────────────────────────────────────────────────────────────────────────────╯
╭ transcript─────────────────────────────────────────────────────────────────────────────╮
│ you: summarize the parser                                                              │
│ assistant: The parser reports precise errors.                                          │
│assistant: Streaming the answer live...                                                 │
│                                                                                        │
│                                                                                        │
│                                                                                        │
│                                                                                        │
│                                                                                        │
╰────────────────────────────────────────────────────────────────────────────────────────╯
╭ input  (Enter sends · Alt+Enter, Ctrl+J, or trailing \ make a newline)─────────────────╮
│                                                                                        │
╰────────────────────────────────────────────────────────────────────────────────────────╯
mode:agent profile:default tok in/out:120/48 24 t/s ctx:~1200/8000                        
F12 mouse:select
