crates/localpilot-tui/tests/snapshots/render__thinking_panel_on_does_not_occlude_the_footer.snap
---
source: crates/localpilot-tui/tests/render.rs
assertion_line: 81
expression: rendered
---
┌LocalPilot──────────────────────────────────────────────────────────────────────────────┐
│LocalPilot v0.1.0 | local/test-model | ws:demo | session:ab12cd                         │
└────────────────────────────────────────────────────────────────────────────────────────┘
┌transcript────────────────────────────────────────────────┐┌thinking────────────────────┐
│ you: summarize the parser                                ││considering the edge cases  │
│ assistant: The parser reports precise errors.            ││                            │
│                                                          ││                            │
│                                                          ││                            │
│                                                          ││                            │
│                                                          ││                            │
│                                                          ││                            │
│                                                          ││                            │
└──────────────────────────────────────────────────────────┘└────────────────────────────┘
┌input  (Enter sends · Alt+Enter, Ctrl+J, or trailing \ make a newline)──────────────────┐
│                                                                                        │
└────────────────────────────────────────────────────────────────────────────────────────┘
mode:agent profile:default tok in/out:120/48 24 t/s ctx:1200/8000
