crates/localpilot-tui/tests/snapshots/render__trust_gate_snapshot.snap
---
source: crates/localpilot-tui/tests/render.rs
expression: "render_natural(&state, 90)"
---
Trust this folder?                                                                        
D:\repos\demo                                                                             
Once trusted, LocalPilot may read, edit, and run commands here                            
subject to the active permission profile.                                                 
[y] trust this folder    [n] exit                                                         
╭ input  (Enter sends · Alt+Enter, Ctrl+J, or trailing \ make a newline)─────────────────╮
│                                                                                        │
╰────────────────────────────────────────────────────────────────────────────────────────╯
mode:agent profile:default tok in/out:120/48 24 t/s ctx:~1200/8000                        
test-model · session:ab12cd34
